--- a/style.css
+++ b/style.css
@@ -4,8 +4,11 @@
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
-body {
-  margin-top: 100px;
+@media (max-width: 650px) {
+  body {
+    margin-top: 100px;
+    background-color: #bae1f7;
+  }
 }
 
 h1,
